--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
 </head>
 <body>
     <form id="signin-form" method="POST">
-        <input type="text" id="username" name="username">
+        <input type="text" name="username">
+        <br><br>
+        <input type="password" name="password">
         <br><br>
         <input type="submit" value="Submit">
     </form>
-    <script>
-        const signin_form = document.getElementById("signin-form");
-
-        signin_form.addEventListener("submit", (event) => {
-            event.preventDefault();
-        })
-    </script>
 </body>
