--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>woaao</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
     <dialog id="signup">
@@ -34,5 +34,5 @@
         <div class="response-status"></div>
     </dialog>
     <button data-dialog-target="signin">Sign in</button>
-    <script src="index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
