--- a/public/admin.html
+++ b/public/admin.html
@@ -3,13 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>:(</title>
+    <title>administration</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
-    cirno couldn't find your page!
-    <br><br>
-    <img src="assets/404.jpg" style="width: 150px;">
-    <br><br>
-    <button onclick="window.location.href = '/'">back home</button>
+    <script src="scripts/admin.js"></script>
 </body>
