--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>woaao</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
@@ -35,4 +38,5 @@
     </dialog>
     <button data-dialog-target="signin">Sign in</button>
     <script src="scripts/index.js"></script>
+    <script src="scripts/oneko.js"></script>
 </body>
