--- a/public/chat.html
+++ b/public/chat.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>woaao</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/chat.css">
@@ -13,4 +16,5 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="scripts/chat.js"></script>
+    <script src="scripts/oneko.js"></script>
 </body>
