--- a/public/chat.html
+++ b/public/chat.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <button id="logout">Log out</button>
+    <button id="admin" style="display: none;">Admin panel</button>
     <ul id="messages"></ul>
     <form id="message-form">
         <input type="text" id="message-input" autocomplete="off">
