hooooly carp biggie

--- a/public/admin.html
+++ b/public/admin.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>administration</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/admin.css">
 </head>
 <body>
+    <h3><a href="/chat">&laquo;&nbsp;</a>Administration panel</h3>
+    <div id="users"></div>
     <script src="scripts/admin.js"></script>
 </body>
