--- a/public/chat.html
+++ b/public/chat.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" type="text/css" href="styles/chat.css">
 </head>
 <body>
-    <button id="logout">Log out</button>
-    <button id="admin" style="display: none;">Admin panel</button>
+    <div id="header">
+        <button id="logout">Log out</button>
+        <button id="prefs">Preferences</button>
+        <button id="admin" style="display: none;">Admin</button>
+    </div>
     <ul id="messages"></ul>
     <form id="message-form">
         <input type="text" id="message-input" autocomplete="off">
@@ -17,5 +20,6 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="scripts/chat.js"></script>
+    <script src="scripts/profile.js"></script>
     <script src="scripts/oneko.js"></script>
 </body>
